style: fix spacing minor issues that were bothering me

--- a/src/typography.pcss
+++ b/src/typography.pcss
@@ -42,16 +42,16 @@ code {
 }
 
 a {
-	color: oklch(from hsl(var(--accent-dark)) l c h);
+	color: oklch(from hsl(var(--accent2)) l c h);
 	text-decoration: underline;
 	transition: color 0.2s ease;
 
 	&:visited {
-		color: oklch(from hsl(var(--accent-dark)) l c calc(h + 20));
+		color: oklch(from hsl(var(--accent2)) l c calc(h + 20));
 	}
 
 	&:is(:link, :visited):hover {
-		color: oklch(from hsl(var(--accent2-dark)) l c calc(h - 20));
+		color: oklch(from hsl(var(--accent2)) l c calc(h - 20));
 	}
 }
 
